Bug 334086 - Crash when adding a program to autostart
Summary: Crash when adding a program to autostart
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR crash
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-29 15:35 UTC by Antonio Rojas
Modified: 2014-04-30 11:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2014-04-29 15:35:38 UTC
Application: System Settings (systemsettings), signal: Aborted
Using host libthread_db library "/usr/lib/libthread_db.so.1".
To enable execution of this file add
	add-auto-load-safe-path /usr/lib/libstdc++.so.6.0.19-gdb.py
line to your configuration file "/home/antonio/.gdbinit".
To completely disable this security protection add
	set auto-load safe-path /
line to your configuration file "/home/antonio/.gdbinit".
For more information about this security protection see the
"Auto-loading safe path" section in the GDB manual.  E.g., run from the shell:
	info "(gdb)Auto-loading safe path"
[Current thread is 1 (Thread 0x7f8b8796b740 (LWP 8888))]

Thread 2 (Thread 0x7f8b770f2700 (LWP 8889)):
#0  0x00007f8b838f635d in poll () from /usr/lib/libc.so.6
#1  0x00007f8b821ee99a in ?? () from /usr/lib/libxcb.so.1
#2  0x00007f8b821f049f in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007f8b79b78299 in ?? () from /usr/lib/qt/plugins/platforms/libqxcb.so
#4  0x00007f8b83f57fe3 in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007f8b80a7a0a2 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007f8b838fed1d in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7f8b8796b740 (LWP 8888)):
[KCrash Handler]
#5  0x00007f8b8384e389 in raise () from /usr/lib/libc.so.6
#6  0x00007f8b8384f788 in abort () from /usr/lib/libc.so.6
#7  0x00007f8b83f4a425 in QMessageLogger::fatal(char const*, ...) const () from /usr/lib/libQt5Core.so.5
#8  0x00007f8b83f47287 in qt_assert_x(char const*, char const*, char const*, int) () from /usr/lib/libQt5Core.so.5
#9  0x00007f8b68a002ba in QList<QString>::operator[](int) [clone .part.35] () from /opt/kf5/lib/plugins/kcm_autostart.so
#10 0x00007f8b68a0654e in Autostart::slotAddProgram() () from /opt/kf5/lib/plugins/kcm_autostart.so
#11 0x00007f8b68a073e5 in Autostart::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () from /opt/kf5/lib/plugins/kcm_autostart.so
#12 0x00007f8b841180a6 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#13 0x00007f8b8575e722 in QAbstractButton::clicked(bool) () from /usr/lib/libQt5Widgets.so.5
#14 0x00007f8b854e7016 in ?? () from /usr/lib/libQt5Widgets.so.5
#15 0x00007f8b854e7b2e in ?? () from /usr/lib/libQt5Widgets.so.5
#16 0x00007f8b854e7ca4 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQt5Widgets.so.5
#17 0x00007f8b8542bcf5 in QWidget::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#18 0x00007f8b853f0bdc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#19 0x00007f8b853f6a75 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#20 0x00007f8b840f0a2d in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#21 0x00007f8b853f4931 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQt5Widgets.so.5
#22 0x00007f8b854489bf in ?? () from /usr/lib/libQt5Widgets.so.5
#23 0x00007f8b8544a7bb in ?? () from /usr/lib/libQt5Widgets.so.5
#24 0x00007f8b853f0bdc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#25 0x00007f8b853f5da6 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#26 0x00007f8b840f0a2d in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#27 0x00007f8b84d4b6ec in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib/libQt5Gui.so.5
#28 0x00007f8b84d4cd95 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib/libQt5Gui.so.5
#29 0x00007f8b84d35e38 in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Gui.so.5
#30 0x00007f8b79b98c10 in ?? () from /usr/lib/qt/plugins/platforms/libqxcb.so
#31 0x00007f8b80562b84 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#32 0x00007f8b80562dc8 in ?? () from /usr/lib/libglib-2.0.so.0
#33 0x00007f8b80562e6c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#34 0x00007f8b8413d6dc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#35 0x00007f8b840ef76b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#36 0x00007f8b840f5ee1 in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#37 0x000000000040e3dc in main ()


Reproducible: Always

Steps to Reproduce:
1. kcmshell5 autostart
2. add any application 
3. crash
Comment 1 Marco Martin 2014-04-30 10:11:55 UTC
I kinda feel there should be a new product for things like that that are workspace but not strictly plasma shell..
anyways, can reproduce.
for assers, is good to put the stderr assert text in the text as well.

WARNING: KAuth was compiled with a working helper backend, but was unable to load it! Check your installation!
Overwriting existing old cached entry due to collision.
Overwriting existing old cached entry due to collision.
ASSERT failure in QList<T>::operator[]: "index out of range", file /opt/kde5/include/QtCore/qlist.h, line 485
Comment 2 Marco Martin 2014-04-30 10:48:55 UTC
Git commit 8a4dcfd248dc71398190a733e71574ace9bf9f6a by Marco Martin.
Committed on 30/04/2014 at 10:47.
Pushed by mart into branch 'master'.

fix adding programs to autostart

M  +5    -6    kcms/autostart/autostart.cpp

http://commits.kde.org/plasma-desktop/8a4dcfd248dc71398190a733e71574ace9bf9f6a
Comment 3 Marco Martin 2014-04-30 11:03:38 UTC
Git commit 3fa03af849b14a7e3d99e866a8b70fdafd10525f by Marco Martin.
Committed on 30/04/2014 at 11:02.
Pushed by mart into branch 'master'.

fix entry deletion

M  +6    -2    kcms/autostart/autostart.cpp

http://commits.kde.org/plasma-desktop/3fa03af849b14a7e3d99e866a8b70fdafd10525f