fix entry deletion

BUG:334086